--- a/public/index.html
+++ b/public/index.html
@@ -7,37 +7,26 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Luke Day's Portfolio - Data Scientist and Machine Learning Engineer with a Ph.D. in Applied Statistics."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="Luke Day Portfolio" />
+    <meta property="og:description" content="Data Scientist | Machine Learning Engineer | Ph.D. in Applied Statistics. Explore my projects and professional experience." />
+    <meta property="og:image" content="%PUBLIC_URL%/profilepic.jpeg" />
+    <meta property="og:url" content="https://lukeaday.github.io/PersonalWebsite/" />
+    <meta property="og:type" content="website" />
+
+    <!-- Meta Tags for Search Engines -->
+    <meta name="keywords" content="Luke Day, Data Scientist, Machine Learning Engineer, Portfolio, PhD, Applied Statistics, Projects" />
+    <meta name="author" content="Luke Day" />
+
+    <title>Luke Day Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
   </body>
 </html>
