--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,15 @@
     <meta name="author" content="Luke Day" />
 
     <title>Luke Day Portfolio</title>
+
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-89WRCVNTF4"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
+      gtag('config', 'G-89WRCVNTF4');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
